django course 10 commit

--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -4,8 +4,7 @@
 
     <div style="height: 10rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
         <h1>
-            잘했어 <br>
-            파이팅 허영
+            잘했어
         </h1>
     </div>
 
