--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,13 @@
     <div class="pragmatic_footer">
-        <div class="pragmatic_footer_button">
+
+        <div style="font-size: .9rem;">
             <span>공지사항</span> |
             <span>제휴문의</span> |
             <sab>서비스 소개</sab>
         </div>
+
         <div class="pragmatic_logo_margin">
             <h6 class="pragmatic_logo">Pragmatic</h6>
         </div>
+
     </div>
