--- a/templates/head.html
+++ b/templates/head.html
@@ -10,6 +10,34 @@
     <!-- Google Fonts Link   -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
     <!--DEFAULT CSS LINK -->
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
+
+    <style>
+        @font-face {
+            font-family: 'NanumSquareOTF_acB';
+            src: local('NanumSquareOTF_acB'),
+            url("{% static 'fonts/NanumSquareOTF_acB.otf' %}") format("opentype");
+        }
+
+        @font-face {
+            font-family: 'NanumSquareOTF_acEB';
+            src: local('NanumSquareOTF_acEB'),
+            url("{% static 'fonts/NanumSquareOTF_acEB.otf' %}") format("opentype");
+        }
+
+        @font-face {
+            font-family: 'NanumSquareOTF_acL';
+            src: local('NanumSquareOTF_acL'),
+            url("{% static 'fonts/NanumSquareOTF_acL.otf' %}") format("opentype");
+        }
+
+        @font-face {
+            font-family: 'NanumSquareOTF_acR';
+            src: local('NanumSquareOTF_acR'),
+            url("{% static 'fonts/NanumSquareOTF_acR.otf' %}") format("opentype");
+        }
+    </style>
+
 </head>
