django course 37 commit

--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -26,7 +26,8 @@
       Delete
     </a>
     {% endif %}
-      <hr>
+    <hr>
+     {% include 'commentapp/create.html' with article=target_article %}
   </div>
 </div>
 {% endblock %}
