django course 39 commit

--- a/static/base.css
+++ b/static/base.css
@@ -18,3 +18,10 @@
 .pragmatic_logo{
     font-family: 'Lobster', cursive;
 }
+
+
+@media screen and (max-width:500px) {
+  html{
+    font-size: 13px;
+  }
+}
