--- a/static/base.css
+++ b/static/base.css
@@ -1,3 +1,14 @@
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+/* ------------------------CLASS------------------------------ */
 .pragmatic_header{
     text-align:center;
     margin:2rem 0;
@@ -19,6 +30,12 @@
     font-family: 'Lobster', cursive;
 }
 
+.pragmatic_header_nav{
+    margin: 0rem 0.5rem;
+}
+.pragmatic_header_navbar{
+    margin: 1rem 0;
+}
 
 @media screen and (max-width:500px) {
   html{
