--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -13,5 +13,11 @@
                 {{ target_project.description }}
             </h4>
         </div>
+
+        <div>
+
+            {% include 'snippets/list_fragment.html' with article_list=object_list %}
+
+        </div>
     </div>
 {% endblock %}
